# openfaceid

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yaml  release.yaml
openfaceid/vector_stores/: faiss.py  vector_store.py
tests/: conftest.py  face_detector.py  helpers.py  test_face_detector.py
tests/vector_stores/: test_faiss.py  test_pinecone.py
tests/vector_stores/cassettes/: test_add_and_search_embeddings.yaml
tests/vector_stores/cassettes/test_pinecone/: test_add_and_search_embeddings.yaml
