[tool.poetry]
name = "openfaceid"
version = "0.1.0"
description = "Identity Verification with Facial Recognition"
authors = ["Abdulhalim Kara <ahalimkara@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "openfaceid"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
